# TSDataForge

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  PUBLISHING.md  README.md  README.zh.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  release.yml
docs/: agent_playbook.md  api_reference.md  benchmark.md  handoff.md  public_data_provenance.md  quickstart.md  showcase.md  use_cases.md
examples/: README.md  agent_only_open_order.py  compare_two_dataset_versions.py  profile_your_own_csv.py  real_csv_to_report_30s.py  real_public_climate_handoff.py  real_public_ecg_handoff.py  real_public_macro_handoff.py
notebooks/: agent_open_order.ipynb  public_ecg_handoff.ipynb
showcase/: README.md
tests/: test_adoption_surface_v029.py  test_agent_docs.py  test_basic.py  test_bilingual_docs.py  test_eda_linkage.py  test_gui_v037.py  test_handoff_v033.py  test_playbooks_v030.py  test_positioning_v032.py  test_public_surface_v035.py  test_release_v034.py  test_release_v036.py  test_release_v037.py  test_similarity_live_v031.py
tsdataforge/: __init__.py  api.py  cli.py  compiler.py  counterfactual.py  demo_assets.py  gui.py  interventions.py  loading.py  observation.py  operators.py  policies.py  series.py  specs.py  surface.py  trace.py
tsdataforge/agent/: __init__.py  action_plan.py  api_reference.py  cards.py  context.py  decision.py  eda_linking.py  examples.py  handoff.py  playbooks.py  positioning.py  scenarios.py  schemas.py  site.py  tool_contracts.py  tutorials.py
tsdataforge/analysis/: __init__.py  dataset.py  describe.py  explain.py
tsdataforge/benchmarks/: __init__.py  suites.py
tsdataforge/core/: __init__.py  base.py  registry.py  results.py  rng.py
tsdataforge/datasets/: __init__.py  builder.py  series_dataset.py  taskify.py
tsdataforge/demo_data/: climate_co2_public.npz  ecg_public.npz  macro_public.npz  sunspots_public.npz
tsdataforge/dynamics/: __init__.py  causal.py  control.py  policy.py  regime.py  state_space.py
tsdataforge/integrations/: __init__.py  external.py  live.py
tsdataforge/primitives/: __init__.py  control.py  events.py  noise.py  seasonal.py  trend.py
tsdataforge/report/: __init__.py  eda.py  linked_bundle.py  plots.py
tsdataforge/self_supervised/: __init__.py  contrastive.py  masking.py  order.py
tsdataforge/similarity/: __init__.py  metrics.py
tsdataforge/taxonomy/: __init__.py  recipes.py  tags.py
