[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsdataforge"
version = "0.3.7"
description = "Time-series profiling and handoff for turning raw datasets into reports, decision records, and reusable bundles."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Zipeng Wu", email = "zxw365@student.bham.ac.uk"}
]
keywords = ["time-series", "profiling", "dataset-report", "handoff", "eda", "dataset-card", "signal-processing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
viz = ["matplotlib>=3.7"]

[project.urls]
Homepage = "https://github.com/ZipengWu365/TSDataForge"
Documentation = "https://zipengwu365.github.io/TSDataForge/"
Source = "https://github.com/ZipengWu365/TSDataForge"
Issues = "https://github.com/ZipengWu365/TSDataForge/issues"

[tool.setuptools.packages.find]
include = ["tsdataforge*"]

[tool.setuptools.package-data]
tsdataforge = ["demo_data/*.npz"]

[project.scripts]
tsdataforge = "tsdataforge.cli:main"
